<resources>
    <string name="clear_history">Clear History</string>
    <string name="app_name">Sign Master</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="locked_icon_description">This chapter is locked</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="translate">Translate</string>
    <string name="quiz">Quiz</string>
    <string name="study">Study</string>
    <string name="news">News</string>
    <string name="news_name">News Title</string>
    <string name="tagline_study">Learn to Speak with Hands\nConnect with Hearts!</string>
    <string name="learn_material">Learn Material</string>
    <string name="material_title">Material Title</string>
    <string name="material_list_title">Material List Title</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="tagline_quiz">Challenge Yourself\nAchieve Your Best!</string>
    <string name="quiz_material">Quiz Material</string>>
    <string name="lets_quiz">Lets Quiz</string>
    <string name="learn_first">Prepare to Learn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answer">Answer</string>
    <string name="completed">Completed</string>
    <string name="exit">Exit</string>
    <string name="quiz_result_percentage">%1$d%%</string>
    <string name="quiz_result">Correct Answers: %1$d/%2$d</string>
    <string name="email">Email@email.com</string>
    <string name="subscription">Subscription</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Don\'t have an acccount? Register here</string>
    <string name="full_name">Full Name</string>
    <string name="alr_have_acc">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_success">You\'ve successfully logged in</string>
    <string name="login_failed">Failed to log in. Please check your email and password again</string>
    <string name="signup_success">You Have Successfully Created an Account</string>
    <string name="signup_failed">Failed to create an account. Please try again</string>
    <string name="question_progress">Question %1$d of %2$d</string>
    <string name="logout_verification">Are you sure you want to come out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_success">You\'ve successfully logged out</string>
    <string name="prediction_placeholder">Prediction</string>
    <string name="fps_placeholder">Fps</string>
    <string name="title_scan">Scan</string>
    <string name="news_description">News Description</string>
    <string name="splash_logo">logo</string>
    <string name="splash_tagline">Learn with Sign Master</string>
    <string name="unknown_username">Unknown Username</string>
    <string name="unknown_email">Unknown Email</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="history">History</string>
    <string name="history_title">Quiz History</string>
    <string name="history_deleted">History item deleted</string>
    <string name="history_cleared">All history cleared</string>
</resources>